@@ -27,6 +27,7 @@ $upload_id = uniqid("");
   * list of available plugins
   */
 $plugins = array(
+       "session",
        "uploadprogress",
        "apc",
        "noplugin"
@@ -68,6 +69,20 @@ function PMA_import_uploadprogressCheck()
     }
     return true;
 }
+
+/**
+  * Checks if PHP 5.4 session upload-progress feature is available.
+  *
+  * @return true if PHP 5.4 session upload-progress is available, false if it is not
+  */
+function PMA_import_sessionCheck()
+{
+    if (PMA_PHP_INT_VERSION < 50400 || ! ini_get('session.upload_progress.enabled')) {
+        return false;
+    }
+    return true;
+}
+
 /**
   * Default plugin for handling import. If no other plugin is available, noplugin is used.
   *
