@@ -15,6 +15,7 @@ phpMyAdmin - ChangeLog
 + Patch #3510656 Contest-1: Ignoring foreign keys while dropping tables
 - Bug #3509686 Reverting sort on joined column does not work
 + New transformation: append string
++ rfe #3507804 Session upload progress (PHP 5.4)
 
 3.5.1.0 (not yet released)
 - bug #3510784 [edit] Limit clause ignored when sort order is remembered
